load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "eip712",
    srcs = [
        "eip712.go",
        "encoding.go",
        "preprocess.go",
    ],
    importpath = "swisstronik/ethereum/eip712",
    visibility = ["//visibility:public"],
    deps = [
        "//types",
        "@com_github_cosmos_cosmos_sdk//client",
        "@com_github_cosmos_cosmos_sdk//codec",
        "@com_github_cosmos_cosmos_sdk//codec/types",
        "@com_github_cosmos_cosmos_sdk//crypto/keyring",
        "@com_github_cosmos_cosmos_sdk//crypto/keys/ed25519",
        "@com_github_cosmos_cosmos_sdk//simapp/params",
        "@com_github_cosmos_cosmos_sdk//types",
        "@com_github_cosmos_cosmos_sdk//types/errors",
        "@com_github_cosmos_cosmos_sdk//types/tx",
        "@com_github_cosmos_cosmos_sdk//types/tx/signing",
        "@com_github_cosmos_cosmos_sdk//x/auth/migrations/legacytx",
        "@com_github_cosmos_cosmos_sdk//x/auth/tx",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//common/math",
        "@com_github_ethereum_go_ethereum//signer/core/apitypes",
        "@io_cosmossdk_errors//:errors",
        "@io_cosmossdk_math//:math",
        "@org_golang_x_text//cases",
        "@org_golang_x_text//language",
    ],
)

go_test(
    name = "eip712_test",
    srcs = [
        "eip712_test.go",
        "preprocess_test.go",
    ],
    deps = [
        ":eip712",
        "//app",
        "//crypto/ethsecp256k1",
        "//encoding",
        "//tests",
        "//types",
        "//x/evm/types",
        "@com_github_cosmos_cosmos_sdk//client",
        "@com_github_cosmos_cosmos_sdk//codec/types",
        "@com_github_cosmos_cosmos_sdk//crypto/keyring",
        "@com_github_cosmos_cosmos_sdk//crypto/types",
        "@com_github_cosmos_cosmos_sdk//simapp/params",
        "@com_github_cosmos_cosmos_sdk//types",
        "@com_github_cosmos_cosmos_sdk//types/tx",
        "@com_github_cosmos_cosmos_sdk//types/tx/signing",
        "@com_github_cosmos_cosmos_sdk//x/auth/ante",
        "@com_github_cosmos_cosmos_sdk//x/auth/signing",
        "@com_github_cosmos_cosmos_sdk//x/bank/types",
        "@com_github_cosmos_cosmos_sdk//x/distribution/types",
        "@com_github_cosmos_cosmos_sdk//x/gov/types/v1beta1",
        "@com_github_cosmos_cosmos_sdk//x/staking/types",
        "@com_github_ethereum_go_ethereum//crypto",
        "@com_github_stretchr_testify//require",
        "@com_github_stretchr_testify//suite",
        "@io_cosmossdk_math//:math",
    ],
)
