load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_protobuf_gen",
    srcs = [
        "ffi.pb.go",
        "node.pb.go",
    ],
    importpath = "swisstronik/go-sgxvm/go_protobuf_gen",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
