[package]
name = "sgx-evm"
version = "0.1.0"
edition = "2021"

[lib]
name = "enclave"
crate-type = ["staticlib"]

[features]
default = ["hardware_mode"]
hardware_mode = []
simulation_mode = []

[dependencies]
derive_more = "0.99"
uuid = { version = "0.8.1", default-features=false }
serde = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
errno = { version = "0.2.8", default-features=false }
thiserror-no-std = "2.0.2"
hex = { version = "0.4.3", default-features=false, features = ["alloc"] }
protobuf = { git = "https://github.com/mesalock-linux/rust-protobuf-sgx", branch = "v2.8" }
internal_types = { path = "./evm/internal_types" }
chrono = { git = "https://github.com/mesalock-linux/chrono-sgx" }
webpki = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
yasna = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"] }
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
num-bigint = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
bit-vec = { version = "0.6", default-features = false}
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
httparse = { version = "1.3.2", default-features=false }
itertools = { version = "0.8" , default-features = false, features = []}
webpki-roots= { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
lazy_static = { version = "*", default-features = false, features = ["spin_no_std"] }
rustls = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx", features = ["dangerous_configuration"] }
x25519-dalek = { version = "2.0.0-pre.1", default-features=false, features=[ "u64_backend" ] }
hmac = { version = "0.11.0", default-features=false }
sha2 = { version = "0.9.5", default-features=false }
deoxysii = { version = "0.2.4", path="../deoxysii-rust" }
primitive-types = { version = "^0.12", default-features = false, features = ["rlp"] }
evm = { version = "0.39.0", default-features = false }
ethereum = { version = "0.14", default-features = false, features = ["with-codec", "with-serde"] }
curve25519-dalek = { version = "4.1.1", default-features = false, features = ["alloc"] }
substrate-bn = { version = "0.6.0", default-featuresc = false }
tiny-keccak = { version = "2.0.2", features = ["fips202"] }
ripemd = { version = "0.1.3", default-features = false }
k256 = { version = "0.11.6", default-features = false, features = ["keccak256", "sha2", "ecdsa"] }
sha3 = { version = "0.10", default-features = false }
rlp = { version = "0.5.1", default-features = false }
num = { version = "0.4", default-features = false, features = ["alloc"] }
bech32 = { version = "0.9.1", default-features = false }
ed25519-dalek = { version = "2.0.0", default-features=false }
multibase = { version = "0.9.1", default-features=false }

# Sgx crates
sgx_types = { version = "1.1.5", git = "https://github.com/apache/teaclave-sgx-sdk.git", tag="v1.1.5" }
sgx_tstd = { version = "1.1.5", git = "https://github.com/apache/teaclave-sgx-sdk.git", tag="v1.1.5", features = ["net", "backtrace"]  }
sgx_trts = { version = "1.1.5", git = "https://github.com/apache/teaclave-sgx-sdk.git", tag="v1.1.5" }
sgx_tcrypto = { version = "1.1.5", git = "https://github.com/apache/teaclave-sgx-sdk.git", tag="v1.1.5" }
sgx_tse = { version = "1.1.5", git = "https://github.com/apache/teaclave-sgx-sdk.git", tag="v1.1.5" }
sgx_rand = { version = "1.1.5", git = "https://github.com/apache/teaclave-sgx-sdk.git", tag="v1.1.5" }

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_tstd = { version = "1.1.5", git = "https://github.com/haerdib/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_trts = { version = "1.1.5", git = "https://github.com/haerdib/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_types = { version = "1.1.5", git = "https://github.com/haerdib/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_tcrypto = { version = "1.1.5", git = "https://github.com/haerdib/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_tse = { version = "1.1.5", git = "https://github.com/haerdib/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_rand = { version = "1.1.5", git = "https://github.com/haerdib/incubator-teaclave-sgx-sdk", branch = "master"}
