load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testing",
    srcs = [
        "app.go",
        "chain.go",
        "coordinator.go",
        "endpoint.go",
        "path.go",
    ],
    importpath = "swisstronik/ibc/testing",
    visibility = ["//visibility:public"],
    deps = [
        "//app",
        "//crypto/ethsecp256k1",
        "//types",
        "//utils",
        "//x/evm/types",
        "@com_github_cosmos_cosmos_sdk//baseapp",
        "@com_github_cosmos_cosmos_sdk//client",
        "@com_github_cosmos_cosmos_sdk//codec/types",
        "@com_github_cosmos_cosmos_sdk//crypto/codec",
        "@com_github_cosmos_cosmos_sdk//crypto/types",
        "@com_github_cosmos_cosmos_sdk//types",
        "@com_github_cosmos_cosmos_sdk//x/auth/types",
        "@com_github_cosmos_cosmos_sdk//x/bank/types",
        "@com_github_cosmos_cosmos_sdk//x/staking/types",
        "@com_github_cosmos_ibc_go_v6//modules/core/02-client/types",
        "@com_github_cosmos_ibc_go_v6//modules/core/03-connection/types",
        "@com_github_cosmos_ibc_go_v6//modules/core/04-channel/types",
        "@com_github_cosmos_ibc_go_v6//modules/core/23-commitment/types",
        "@com_github_cosmos_ibc_go_v6//modules/core/24-host",
        "@com_github_cosmos_ibc_go_v6//modules/core/exported",
        "@com_github_cosmos_ibc_go_v6//modules/light-clients/07-tendermint/types",
        "@com_github_cosmos_ibc_go_v6//testing",
        "@com_github_cosmos_ibc_go_v6//testing/mock",
        "@com_github_cosmos_ibc_go_v6//testing/simapp/helpers",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_stretchr_testify//require",
        "@com_github_tendermint_tendermint//abci/types",
        "@com_github_tendermint_tendermint//proto/tendermint/types",
        "@com_github_tendermint_tendermint//types",
    ],
)
